syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.History";
package CecoChat.Contracts.History;
import "google/protobuf/timestamp.proto";
import "history/history-message.proto";

service History {
  rpc GetUserHistory(GetUserHistoryRequest) returns (GetUserHistoryResponse);
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
}

message GetUserHistoryRequest {
  google.protobuf.Timestamp older_than = 1;
}

message GetUserHistoryResponse {
  repeated HistoryMessage messages = 1;
}

message GetHistoryRequest {
  int64 other_user_id = 1;
  google.protobuf.Timestamp older_than = 2;
}

message GetHistoryResponse {
  repeated HistoryMessage messages = 1;
}
